
2004-02-25	Joel Becker <joel.becker@oracle.com>

	* configure.in: 1.0.1 version
	* vendor/redhat/oracleasm.init.in: RHEL3 firewire kernels.

2004-02-02	Joel Becker <joel.becker@oracle.com>

	* Going to tag.

2004-01-29	Joel Becker <joel.becker@oracle.com>

	* configure.in: Not supporting <SP3.
	* vendor/unitedlinux/Makefile: Not supporting <SP3.
	* vendor/common/oracleasm-support.spec.in: Comment about UL
		kernel paths.
	* vendor/{redhat,unitedlinux}/oracleasm-*.spec.in: Bump
		required support_ver to 1.0.0.

2004-01-28	Joel Becker <joel.becker@oracle.com>

	* vendor/unitedlinux/oracleasm-2.4.19*: Not supporting <SP3.

2004-01-28	Joel Becker <joel.becker@oracle.com>

	* configure.in: Make 1.0.0.

2004-01-28	Joel Becker <joel.becker@oracle.com>

	* vendor/unitedlinux/oracleasm.init.in: NOOP the 'link' method.
	* kernel/oracleasm.c: Add BH_Atomic.  Thanks for telling me,
		guys.  Also, a couple BUG() checks.  Oh, and make
		ASM_SUBMITTED have a proper lifetime.

2004-01-21	Joel Becker <joel.becker@oracle.com>

	* include/linux/asmmanager.h: Add asm_disk_name().

2004-01-16	Joel Becker <joel.becker@oracle.com>

	* kernel/Makefile: Silly "ent" vs "enterprise".

2004-01-07	Joel Becker <joel.becker@oracle.com>

	* *: Seperate out Open code.

2004-01-05	Joel Becker <joel.becker@oracle.com>

	* include/asmerror.h: Dual GPL/BSD license.
	* include/linux/asmdisk.h: Dual GPL/BSD license.
	* include/linux/asmabi.h: Dual GPL/BSD license.
	* include/linux/asmmanager.h: Dual GPL/BSD license.
	* include/linux/asmcompat32.h: Dual GPL/BSD license.
	* COPYING.GPL: Moved COPYING to COPYING.GPL.
	* COPYING.LGPL: Added.

2004-01-05	Joel Becker <joel.becker@oracle.com>

	* *.[ch]: GPL and LGPL copyright headers.
	* tools/asmscan.c: Some execution cleanups.
	* vendor/redhat/oracleasm.init.in: Fix createdisk and deletedisk
		and don't symlink against a missing module.
	* vendor/unitedlinux/*.spec.in: Add depmod.
	* vendor/unitedlinux/oracleasm.init.in: Fix createdisk, symlink