@@ -17,7 +17,7 @@
 
 # This must be changed to the minimum ABI compat kernel version expected
 %define base 2.4.9-e
-%define kver %{base}.12
+%define kver %{base}.25
 
 # The minimum -support package required for the kernel bits.
 %define support_ver     1.0.0
